fix: tocWrapのマージンを調整し、上部にスペースを追加

--- a/src/components/Features/Blog/Article/index.module.css
+++ b/src/components/Features/Blog/Article/index.module.css
@@ -54,7 +54,7 @@
 }
 
 .tocWrap {
-  margin: 0;
+  margin-top: 2.5rem;
 }
 
 .introBlock {
